force-app/main/default/objects/KimbleOne__FlexibleTemplateItem__c/KimbleOne__FlexibleTemplateItem__c.object-meta.xml
<CustomObject>
    <label>Flexible Template Item</label>
    <nameField>
        <label>Flexible Template Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flexible Template Items</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>