force-app/main/default/objects/KimbleOne__FlexibleTemplateItem__c/fields/KimbleOne__DisplayCondition__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DisplayCondition__c</fullName>
    <label>Display Condition</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>