force-app/main/default/objects/KimbleOne__FlexibleTemplateItem__c/fields/KimbleOne__ExtendedAttributes__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExtendedAttributes__c</fullName>
    <label>Extended Attributes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>