force-app/main/default/objects/KimbleOne__FlexibleTemplateItem__c/fields/KimbleOne__ImageDocumentName__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ImageDocumentName__c</fullName>
    <label>Image Document Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>