force-app/main/default/objects/KimbleOne__FlexibleTemplateItem__c/fields/KimbleOne__Label__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Label__c</fullName>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>