force-app/main/default/objects/KimbleOne__FlexibleTemplateItem__c/fields/KimbleOne__LabelStyleClass__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__LabelStyleClass__c</fullName>
    <label>Label Style Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>