force-app/main/default/objects/KimbleOne__FlexibleTemplateItem__c/fields/KimbleOne__LabelText__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__LabelText__c</fullName>
    <label>Label Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>