force-app/main/default/objects/KimbleOne__FlexibleTemplateItem__c/fields/KimbleOne__SourceType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SourceType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Source Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>FlexibleTemplateItemSourceType</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Flexible Template Items</relationshipLabel>
    <relationshipName>FlexibleTemplateItems</relationshipName>
    <type>Lookup</type>
</CustomField>