force-app/main/default/objects/KimbleOne__FlexibleTemplateItem__c/fields/KimbleOne__StyleAttributes__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__StyleAttributes__c</fullName>
    <label>Style Attributes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>