force-app/main/default/objects/KimbleOne__FlexibleTemplateItem__c/fields/KimbleOne__StyleClass__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__StyleClass__c</fullName>
    <label>Style Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>