force-app/main/default/objects/KimbleOne__FlexibleTemplateItem__c/fields/KimbleOne__ValueStyleClass__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ValueStyleClass__c</fullName>
    <label>Value Style Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>